--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -7,8 +7,14 @@
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
-    <body>
+	<body>
 	    <div class="page-header">
+		{% if user.is_authenticated %}
+		    <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+		    <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+		{% else %}
+		    <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
+		{% endif %}
 		<h1><a href="/">Django Girls Blog</a></h1>
 	    </div>
 	    <div class="content container">
@@ -19,5 +25,5 @@
 		    </div>
 		</div>
 	    </div>
-    </body>
+	</body>
 </html>
